# we-are-AI

./: CMakeLists.txt  package.xml  setup.py
ai/: CMakeLists.txt  package.xml  setup.py
ai/node/: my_python_node.py
node/: ai_node.py
