<?xml version="1.0"?>
<package format="2">
  <name>ai</name>
  <version>0.0.0</version>
  <description>The ai package</description>
  <maintainer email="seunghwan@todo.todo">seunghwan</maintainer>
  <license>TODO</license>
  <buildtool_depend>catkin</buildtool_depend>
  <depend>rospy</depend>
  <depend>std_msgs</depend>

  <export>

  </export>
</package>
